@@ -1,3 +1,10 @@
+2006-09-21  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/ext/type_traits.h (__numeric_traits_integer): New.
+	(__numeric_traits_floating): New.
+	(__numeric_traits): Use them.
+	* testsuite/ext/type_traits.cc: New.
+	
 2006-09-21  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/ext/hash_map: Remove forward declaration of equality
